# python-dev-container

./: app.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
