[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["ttungbmt <ttungbmt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.1.4"
geopandas = "^0.14.2"
streamlit = "^1.30.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
